k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: faas-fn
  labels:
    name: faas-fn
    tier: serverless-workloads
---
apiVersion: v1
kind: Namespace
metadata:
  name: faas-system
  labels:
    name: faas-system
    tier: serverless-controller
