k8s/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: faas-system
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: faas-system
spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
